MODINV-1276: Can't move holdings/items to another instance (#860)
* MODINV-1276: [RRT] Can't move holdings/items to another instance

(cherry picked from commit bee2cafcb02c94489ad0c8080e3fabd6dba595fa)